# audio-kernel

./: .gitignore  CMakeLists.txt  README.md  audio_kernel  manticore_audio_kernel_software_spec.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  aaudio_player.cpp  aaudio_player.h  native_bridge.cpp
android/app/src/main/java/com/manticore/toneflow/: MainActivity.kt  NativeToneEngine.kt  PresetAdapter.kt  StereogramView.kt
android/app/src/main/res/drawable/: btn_cycle.xml  ic_launcher_background.xml  ic_launcher_round.xml  preset_item_bg.xml  preset_item_selected.xml  stereogram_frame.xml
android/app/src/main/res/layout/: activity_main.xml  item_preset.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: architecture.md  dsp_notes.md  latency_measurement.md  safety_model.md
include/manticore/core/: audio_frame.h  audio_types.h  constants.h  errors.h  time.h
include/manticore/dsp/: analyzer.h  delay_line.h  envelope.h  filters.h  gain.h  limiter.h  mixer.h  noise.h  oscillator.h  wav_writer.h
include/manticore/engine/: audio_engine.h  dsp_graph.h  processor.h  runtime_config.h
include/manticore/io/: audio_backend.h  portaudio_backend.h  wav_reader.h
include/manticore/safety/: cue_health.h  safety_event.h  safety_governor.h
include/manticore/telemetry/: fit_state.h  outcome_packet.h  system_health.h
include/manticore/therapy/: carrier_family.h  stimulus_engine.h  therapy_param_set.h
include/manticore/toneflow/: color_filters.h  perception.h  presets.h  stereo_reverb.h  tone_engine.h  tone_oscillator.h  types.h
src/: main.cpp
src/core/: time.cpp
src/dsp/: analyzer.cpp  delay_line.cpp  envelope.cpp  filters.cpp  gain.cpp  limiter.cpp  mixer.cpp  noise.cpp  oscillator.cpp  wav_writer.cpp
src/engine/: audio_engine.cpp  dsp_graph.cpp
src/io/: portaudio_backend.cpp
src/safety/: safety_governor.cpp
src/telemetry/: system_health.cpp
src/therapy/: stimulus_engine.cpp  therapy_param_set.cpp
src/toneflow/: color_filters.cpp  perception.cpp  presets.cpp  stereo_reverb.cpp  tone_engine.cpp  tone_oscillator.cpp
tests/: test_analyzer.cpp  test_audio_frame.cpp  test_delay_line.cpp  test_dsp_graph.cpp  test_filters.cpp  test_gain.cpp  test_limiter.cpp  test_main.cpp  test_oscillator.cpp  test_runner.h  test_safety_governor.cpp  test_wav_writer.cpp
tools/: generate_noise.cpp  generate_sine.cpp  generate_toneflow.cpp  inspect_wav.cpp  latency_click_test.cpp  live_passthrough.cpp
